syntax = "proto3";

package yandex.cloud.priv.microcosm.v1;

import "ydb/public/api/client/yc_private/operation/operation.proto";
import "ydb/public/api/client/yc_private/common/validation.proto";

option go_package = "github.com/ydb-platform/ydb/ydb/public/api/client/yc_private/microcosm;microcosm";
option java_outer_classname = "PMICOS";


service OperationService {
  rpc Get (GetOperationRequest) returns (operation.Operation);

  rpc List (ListOperationsRequest) returns (ListOperationsResponse);

  rpc GetCreator (GetCreatorRequest) returns (GetCreatorResponse);
}

message GetOperationRequest {
  string operation_id = 1 [(required) = true, (length) = "<=50"];
}

message ListOperationsRequest {
  string folder_id = 1 [(required) = true, (length) = "<=50"];
  int64 page_size = 2 [(value) = "0-1000"];
  string page_token = 3 [(length) = "<=100"];
}

message ListOperationsResponse {
  repeated operation.Operation operations = 1;
  string next_page_token = 2;
}

message GetCreatorRequest {
  string operation_id = 1 [(required) = true, (length) = "<=50"];
}

message GetCreatorResponse {
  string operation_id = 1;
  string created_by = 2;
  string subject_type = 3;
}
